--- a/style/style.scss
+++ b/style/style.scss
@@ -4,22 +4,25 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body {
+body { 
+  max-height: 1000px; 
+
   .webPage {
-    padding: 20px 100px;
+    
+    padding: 13.5px 100px;
     position: relative;
     header {
       .nav {
         .navContainer {
           .logo {
-            width: 85px;
+            width: 80px;
           }
           .navList {
             font-family: "Poppins", sans-serif;
-            font-size: 28px;
+            font-size: 20px;
             font-weight: 500;
             li {
-              padding-right: 5px;
+              padding-right: 4px;
             }
             li:hover {
               transform: translateY(-5px);
@@ -28,21 +31,18 @@ body {
         }
       }
     }
-    main {
-      height: 833px;
-    }
+    
     .content {
       position: relative;
       width: 100%;
-
       display: flex;
 
       .textBox {
         position: relative;
         padding-top: 100px;
-        h1 {
+        h2 {
           color: #333;
-          font-size: 4.5em;
+          font-size: 2.2em;
           line-height: 1.4em;
           font-weight: 600;
           span {
@@ -53,16 +53,16 @@ body {
         }
         p {
           color: #333;
-          font-size: 23px;
+          font-size: 19px;
           font-weight: 500;
         }
         a {
           display: inline-block;
           //   margin-top: 20px;
           text-decoration: none;
-          font-size: 17px;
+          font-size: 16px;
           line-height: 1px;
-          padding: 25px 25px;
+          padding: 20px 20px;
           border-radius: 40px;
           font-weight: 500;
           color: #fff;
@@ -70,19 +70,23 @@ body {
         }
       }
       .imgBox {
+     
         display: flex;
         justify-content: flex-end;
-        padding-top: 35px;
+        padding-top: 30px;
         padding-right: 9em;
+        transform: scale(0.9);
+
         img {
-          width: 400px;
+          width: 340px;
+        
         }
       }
     }
     .thumb {
       position: absolute;
       left: 45%;
-      bottom: 0.1%;
+      bottom: 5%;
       display: flex;
       transform: translateX(-50%);
       li {
@@ -91,6 +95,9 @@ body {
         margin: 0px 20px;
         cursor: pointer;
         transition: 0.5s;
+        img{
+            width: 60px;
+        }
       }
       li:hover {
         transform: translateY(-15px);
@@ -98,7 +105,7 @@ body {
     }
     .sci {
       position: absolute;
-      top: 50%;
+      top: 45%;
       right: 2%;
       transform: translateY(-50%);
       display: flex;
@@ -114,7 +121,7 @@ body {
           margin-right: 15px;
           transform: scale(0.7);
           img {
-            width: 50px;
+            width: 32px;
           }
         }
       }
@@ -126,7 +133,7 @@ body {
       width: 100%;
       height: 100%;
       background-color: #017143;
-      clip-path: circle(800px at right 950px);
+      clip-path: circle(700px at right 800px);
     }
   }
 }
@@ -142,7 +149,7 @@ body {
     .textBox {
       padding-top: 50px !important;
       padding-bottom: 50px !important;
-      h1 {
+      h2 {
         font-size: 2em !important;
 
         span {
@@ -210,7 +217,7 @@ body {
     .textBox {
       padding-top: 50px !important;
       padding-bottom: 50px !important;
-      h1 {
+      h2 {
         font-size: 2em !important;
 
         span {
