--- a/style/style.css
+++ b/style/style.css
@@ -6,32 +6,32 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  max-height: 1000px;
+}
+
 body .webPage {
-  padding: 20px 100px;
+  padding: 13.5px 100px;
   position: relative;
 }
 
 body .webPage header .nav .navContainer .logo {
-  width: 85px;
+  width: 80px;
 }
 
 body .webPage header .nav .navContainer .navList {
   font-family: "Poppins", sans-serif;
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 500;
 }
 
 body .webPage header .nav .navContainer .navList li {
-  padding-right: 5px;
+  padding-right: 4px;
 }
 
 body .webPage header .nav .navContainer .navList li:hover {
   -webkit-transform: translateY(-5px);
           transform: translateY(-5px);
-}
-
-body .webPage main {
-  height: 833px;
 }
 
 body .webPage .content {
@@ -47,14 +47,14 @@ body .webPage .content .textBox {
   padding-top: 100px;
 }
 
-body .webPage .content .textBox h1 {
+body .webPage .content .textBox h2 {
   color: #333;
-  font-size: 4.5em;
+  font-size: 2.2em;
   line-height: 1.4em;
   font-weight: 600;
 }
 
-body .webPage .content .textBox h1 span {
+body .webPage .content .textBox h2 span {
   color: #017143;
   font-size: 1.2em;
   font-weight: 700;
@@ -62,16 +62,16 @@ body .webPage .content .textBox h1 span {
 
 body .webPage .content .textBox p {
   color: #333;
-  font-size: 23px;
+  font-size: 19px;
   font-weight: 500;
 }
 
 body .webPage .content .textBox a {
   display: inline-block;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 16px;
   line-height: 1px;
-  padding: 25px 25px;
+  padding: 20px 20px;
   border-radius: 40px;
   font-weight: 500;
   color: #fff;
@@ -85,18 +85,20 @@ body .webPage .content .imgBox {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  padding-top: 35px;
+  padding-top: 30px;
   padding-right: 9em;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
 }
 
 body .webPage .content .imgBox img {
-  width: 400px;
+  width: 340px;
 }
 
 body .webPage .thumb {
   position: absolute;
   left: 45%;
-  bottom: 0.1%;
+  bottom: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -113,6 +115,10 @@ body .webPage .thumb li {
   transition: 0.5s;
 }
 
+body .webPage .thumb li img {
+  width: 60px;
+}
+
 body .webPage .thumb li:hover {
   -webkit-transform: translateY(-15px);
           transform: translateY(-15px);
@@ -120,7 +126,7 @@ body .webPage .thumb li:hover {
 
 body .webPage .sci {
   position: absolute;
-  top: 50%;
+  top: 45%;
   right: 2%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -152,7 +158,7 @@ body .webPage .sci li a {
 }
 
 body .webPage .sci li a img {
-  width: 50px;
+  width: 32px;
 }
 
 body .webPage .circle {
@@ -162,8 +168,8 @@ body .webPage .circle {
   width: 100%;
   height: 100%;
   background-color: #017143;
-  -webkit-clip-path: circle(800px at right 950px);
-          clip-path: circle(800px at right 950px);
+  -webkit-clip-path: circle(700px at right 800px);
+          clip-path: circle(700px at right 800px);
 }
 
 @media (max-width: 1009px) {
@@ -177,10 +183,10 @@ body .webPage .circle {
     padding-top: 50px !important;
     padding-bottom: 50px !important;
   }
-  .content .textBox h1 {
+  .content .textBox h2 {
     font-size: 2em !important;
   }
-  .content .textBox h1 span {
+  .content .textBox h2 span {
     font-size: 0.9em !important;
   }
   .content .textBox p {
@@ -239,10 +245,10 @@ body .webPage .circle {
     padding-top: 50px !important;
     padding-bottom: 50px !important;
   }
-  .content .textBox h1 {
+  .content .textBox h2 {
     font-size: 2em !important;
   }
-  .content .textBox h1 span {
+  .content .textBox h2 span {
     font-size: 0.9em !important;
   }
   .content .textBox p {
